Removing Personnel info

--- a/socials.html
+++ b/socials.html
@@ -11,8 +11,8 @@
     <ol>
         <li><a href="https://www.instagram.com/joshua.brgnz/">Instagram</a></li>
         <li><a href="https://twitter.com/Josh_3019">Twitter</a></li>
-        <li>Phone number (647-641-3117)</li>
-        <li>email: joshuabraganza30@gmail.com</li>
+        <li>Phone number (312-321-3117)</li>
+        <li>email: TEST30@gmail.com</li>
     </ol>
 
     <hr noshade=""> 
